--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,8 @@ addopts =
     --clean-alluredir
 
 testpaths = tests/mobile
+
+markers =
+    api: api tests
+    mobile: mobile tests
+    web: ui tests
